Fix overflow on comment form

--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -95,5 +95,5 @@
   outline: none;
   padding: 5px 0 0 5px;
   margin: 5px;
-  width: 100%;
+  width: 95%;
 }
